✨ Amélioration de l'assistant Aurion : design, mots-clés intelligents, réponses élargies

--- a/a-propos.html
+++ b/a-propos.html
@@ -9,20 +9,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div id="menu-overlay" class="menu-overlay hidden"></div>
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
-    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav role="navigation">
+    <nav class="main-nav">
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
         <li><a href="portfolio.html">🖼️ Portfolio</a></li>
         <li><a href="tarifs.html">💰 Tarifs</a></li>
-        <li><a href="contact.html">📞 Contact & Devis</a></li>
+        <li><a href="contact.html">📞 Contact &amp; Devis</a></li>
       </ul>
     </nav>
   </header>
