--- a/portfolio.html
+++ b/portfolio.html
@@ -8,15 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div id="menu-overlay" class="menu-overlay hidden"></div>
   <div id="particles-js"></div>
   <div id="loader">
     <div class="spinner"></div>
   </div>
   <header>
-    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav>
+    <nav class="main-nav">
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
