--- a/services.html
+++ b/services.html
@@ -48,10 +48,8 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <div id="menu-overlay" class="menu-overlay hidden"></div>
-    <div id="menu-toggle" class="menu-toggle" aria-label="Ouvrir le menu" aria-controls="main-menu" aria-expanded="false">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav>
+    <nav class="main-nav">
       <ul id="main-menu" class="menu-list">
         <li><a href="index.html">🏠 Accueil</a></li>
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
