🧨 Première version du site Studio Rapido

--- a/index.html
+++ b/index.html
@@ -22,15 +22,25 @@
   <div id="menu-overlay" class="menu-overlay hidden"></div>
   <header>
     <button id="darkModeToggle">🌓</button>
-    <nav class="main-nav">
-      <ul id="main-menu" class="menu-list">
-        <li><a href="index.html">🏠 Accueil</a></li>
-        <li><a href="a-propos.html">ℹ️ À propos</a></li>
-        <li><a href="services.html">🧰 Services</a></li>
-        <li><a href="portfolio.html">🖼️ Portfolio</a></li>
-        <li><a href="tarifs.html">💰 Tarifs</a></li>
-        <li><a href="contact.html">📞 Contact & Devis</a></li>
-      </ul>
+    <nav>
+      <div id="mySidenav" class="sidenav">
+        <a id="closeBtn" href="#" class="close">×</a> 
+        <ul>
+          <li><a href="index.html">🏠 Accueil</a></li>
+          <li><a href="a-propos.html">ℹ️ À propos</a></li>
+          <li><a href="services.html">🧰 Services</a></li>
+          <li><a href="portfolio.html">🖼️ Portfolio</a></li>
+          <li><a href="tarifs.html">💰 Tarifs</a></li>
+          <li><a href="contact.html">📞 Contact & Devis</a></li>
+        </ul>
+      </div>
+      <a href="#" id="openBtn">
+        <span class="burger-icon">
+          <span></span>
+          <span></span> 
+          <span></span>
+        </span>
+      </a>
     </nav>
   </header>
   <div id="aurion-overlay" class="aurion-overlay hidden"></div>
@@ -173,5 +183,5 @@
       setTimeout(() => loader.style.display = 'none', 500);
     });
   </script>
-</body>
+</body> 
 </html>
