✨ Améliorations visuelles : refonte dark mode, stats stylées, structure épurée

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <section id="hero" class="hero">
       <div class="hero-background"></div>
       <div class="hero-content">
-        <h1 style="font-size: 3.2rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
+        <h1>
           🚀 Studio Rapido
         </h1>
-        <p style="font-family: 'Outfit', sans-serif; font-size: 1.8rem; font-weight: 500; color: var(--text-color); text-shadow: 1px 1px 3px rgba(0,0,0,0.3); letter-spacing: 0.5px; font-style: italic;">
+        <p>
           Ton univers digital sur-mesure : design animé, code intelligent & projets stylés.
         </p>
         <a href="#welcome" class="cta">✨ Entrer dans l’univers</a>
@@ -85,10 +85,10 @@
     <section id="welcome" class="scroll-right">
       <div class="welcome-overlay">
         <div class="welcome-content">
-          <h1 style="font-size: 2.8rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
+          <h1 class="text-white">
             👋 Bienvenue chez Studio Rapido
           </h1>
-          <p style="font-size: 1.6rem; font-weight: 500; font-style: italic; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">
+          <p class="text-white">
             Créateur de sites modernes, d’univers animés et d’IA sur mesure.
           </p>
           <a href="a-propos.html" class="cta">🔎 Découvrir À propos</a>
@@ -97,15 +97,15 @@
     </section>
 
     <section class="zoom-in">
-      <h2 style="font-size: 2.4rem; font-weight: 700; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 4px rgba(0,0,0,0.2);">🧪 Nos technologies</h2>
-      <p style="font-size: 1.4rem; font-family: 'Outfit', sans-serif; color: var(--text-color); font-style: italic; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
+      <h2>🧪 Nos technologies</h2>
+      <p>
         Nous utilisons des outils modernes pour créer des expériences immersives : HTML5, CSS3, JavaScript, IA, animations Web et plus encore.
       </p>
     </section>
 
     <section class="fade-in">
-      <h2 style="font-size: 2.4rem; font-weight: 700; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 4px rgba(0,0,0,0.2);">🎯 Notre mission</h2>
-      <p style="font-size: 1.4rem; font-family: 'Outfit', sans-serif; color: var(--text-color); font-style: italic; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
+      <h2>🎯 Notre mission</h2>
+      <p>
         Offrir à chacun un univers web interactif, intelligent et sur-mesure. Studio Rapido conçoit, développe et sublime vos idées numériques.
       </p>
     </section>
